...
    final theme = Theme.of(context);

    return Semantics(
      excludeSemantics: true,
      textField: true,
      onTap: _focusNode.requestFocus,
      label: 'Search package name',
      child: AnimatedContainer(
        duration: const Duration(milliseconds: 100),
        width: _expanded ? expandedWidth : closedWidth,
        height: closedWidth,
        decoration: BoxDecoration(
          borderRadius: BorderRadius.circular(closedWidth),
...
