...
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                const SizedBox(
                  height: 100,
                ),
                Semantics(
                  label: 'Go back to the previous page',
                  button: true,
                  excludeSemantics: true,
                  onTap: Get.back,
                  child: IconButton(
                    onPressed: Get.back,
                    icon: const Icon(Icons.arrow_circle_left_outlined),
...
